# chatbot_talentu

./: .dockerignore  .env.template  .gitignore  Dockerfile  LICENSE  README.md  docker-compose.yml  main.py  pyproject.toml
