[tool.poetry]
name = "chatbot-talentu"
version = "0.1.0"
description = "Chat bot Headless for Webhook integration with Zoho Customer service channels"
authors = ["richard-robles-neero <142441502+richard-robles-neero@users.noreply.github.com>"]
license = "GLP v3"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "*"
trio = "*"
hypercorn = "*"
openai = "*"
httpx = "*"
uvicorn = "*"
gunicorn = "*"

[tool.poetry.group.dev.dependencies]


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
